parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    CLASS
    DOT
    EXPONENTIATION
    FALSE
    IDENTITY
    INPUT
    INTERFACE
    MACUMULATIVE
    NEW
    NIDENTITY
    NOT
    NULL
    OR
    PRINT
    QUESTION
    QUEUE
    STACK
    TRUE
    WHILE

Grammar

Rule 0     S' -> php_block
Rule 1     php_block -> PHP_OPEN statement_list PHP_CLOSE
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> asignacion
Rule 5     statement -> impresion
Rule 6     statement -> if_statement
Rule 7     statement -> funcion
Rule 8     statement -> declarar_array
Rule 9     statement -> retorno
Rule 10    statement -> input_statement
Rule 11    statement -> for_statement
Rule 12    statement -> empty
Rule 13    input_statement -> VARIABLE ASSIGN READLINE LPAREN STRING RPAREN SEMICOL
Rule 14    funcion -> FUNCTION NAMEFUNCTION LPAREN parametros RPAREN LBRACE statement_list RBRACE
Rule 15    asignacion -> VARIABLE ASSIGN expresion SEMICOL
Rule 16    asignacion -> VARIABLE ASSIGN condicion SEMICOL
Rule 17    asignacion -> array_access ASSIGN expresion SEMICOL
Rule 18    impresion -> ECHO SEMICOL
Rule 19    impresion -> ECHO expresion SEMICOL
Rule 20    impresion -> ECHO expresion_list SEMICOL
Rule 21    expresion_list -> expresion
Rule 22    expresion_list -> expresion COMA expresion_list
Rule 23    expresion -> termino
Rule 24    expresion -> termino operador expresion
Rule 25    expresion -> termino comparador termino
Rule 26    expresion -> LPAREN expresion RPAREN operador expresion
Rule 27    expresion -> LPAREN expresion RPAREN
Rule 28    expresion -> llamada_funcion
Rule 29    expresion -> array_access
Rule 30    termino -> VARIABLE
Rule 31    termino -> NUMBER
Rule 32    termino -> FLOAT
Rule 33    termino -> STRING
Rule 34    condicion -> expresion comparador expresion
Rule 35    condicion -> condicion AND_OP condicion
Rule 36    condicion -> condicion OR_OP condicion
Rule 37    condicion -> NOT_OP condicion
Rule 38    condicion -> expresion
Rule 39    comparador -> EQ
Rule 40    comparador -> NEQ
Rule 41    comparador -> GT
Rule 42    comparador -> LT
Rule 43    comparador -> GE
Rule 44    comparador -> LE
Rule 45    operador -> PLUS
Rule 46    operador -> MINUS
Rule 47    operador -> TIMES
Rule 48    operador -> DIVIDE
Rule 49    operador -> MOD
Rule 50    if_statement -> IF LPAREN condicion RPAREN LBRACE statement_list RBRACE
Rule 51    if_statement -> IF LPAREN condicion RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
Rule 52    if_statement -> IF LPAREN condicion RPAREN LBRACE statement_list RBRACE elseif_blocks ELSE LBRACE statement_list RBRACE
Rule 53    elseif_blocks -> ELSEIF LPAREN condicion RPAREN LBRACE statement_list RBRACE
Rule 54    elseif_blocks -> elseif_blocks ELSEIF LPAREN condicion RPAREN LBRACE statement_list RBRACE
Rule 55    for_statement -> FOR LPAREN initialization condition increment RPAREN LBRACE statement_list RBRACE
Rule 56    initialization -> VARIABLE ASSIGN expresion
Rule 57    initialization -> initialization COMA VARIABLE ASSIGN expresion
Rule 58    condition -> expresion comparador expresion
Rule 59    increment -> VARIABLE INCREMENT
Rule 60    increment -> VARIABLE DECREMENT
Rule 61    parametros -> VARIABLE
Rule 62    parametros -> VARIABLE COMA parametros
Rule 63    parametros -> empty
Rule 64    declarar_array -> VARIABLE ASSIGN ARRAY LPAREN argumentos RPAREN SEMICOL
Rule 65    declarar_array -> VARIABLE ASSIGN LBRACKET argumentos RBRACKET SEMICOL
Rule 66    argumentos -> expresion
Rule 67    argumentos -> expresion COMA argumentos
Rule 68    argumentos -> empty
Rule 69    retorno -> RETURN expresion SEMICOL
Rule 70    llamada_funcion -> VARIABLE LPAREN argumentos RPAREN
Rule 71    array_access -> VARIABLE LBRACKET expresion RBRACKET
Rule 72    empty -> <empty>

Terminals, with rules where they appear

AND                  : 
AND_OP               : 35
ARRAY                : 64
ASSIGN               : 13 15 16 17 56 57 64 65
CLASS                : 
COMA                 : 22 57 62 67
DECREMENT            : 60
DIVIDE               : 48
DOT                  : 
ECHO                 : 18 19 20
ELSE                 : 51 52
ELSEIF               : 53 54
EQ                   : 39
EXPONENTIATION       : 
FALSE                : 
FLOAT                : 32
FOR                  : 55
FUNCTION             : 14
GE                   : 43
GT                   : 41
IDENTITY             : 
IF                   : 50 51 52
INCREMENT            : 59
INPUT                : 
INTERFACE            : 
LBRACE               : 14 50 51 51 52 52 53 54 55
LBRACKET             : 65 71
LE                   : 44
LPAREN               : 13 14 26 27 50 51 52 53 54 55 64 70
LT                   : 42
MACUMULATIVE         : 
MINUS                : 46
MOD                  : 49
NAMEFUNCTION         : 14
NEQ                  : 40
NEW                  : 
NIDENTITY            : 
NOT                  : 
NOT_OP               : 37
NULL                 : 
NUMBER               : 31
OR                   : 
OR_OP                : 36
PHP_CLOSE            : 1
PHP_OPEN             : 1
PLUS                 : 45
PRINT                : 
QUESTION             : 
QUEUE                : 
RBRACE               : 14 50 51 51 52 52 53 54 55
RBRACKET             : 65 71
READLINE             : 13
RETURN               : 69
RPAREN               : 13 14 26 27 50 51 52 53 54 55 64 70
SEMICOL              : 13 15 16 17 18 19 20 64 65 69
STACK                : 
STRING               : 13 33
TIMES                : 47
TRUE                 : 
VARIABLE             : 13 15 16 30 56 57 59 60 61 62 64 65 70 71
WHILE                : 
error                : 

Nonterminals, with rules where they appear

argumentos           : 64 65 67 70
array_access         : 17 29
asignacion           : 4
comparador           : 25 34 58
condicion            : 16 35 35 36 36 37 50 51 52 53 54
condition            : 55
declarar_array       : 8
elseif_blocks        : 52 54
empty                : 12 63 68
expresion            : 15 17 19 21 22 24 26 26 27 34 34 38 56 57 58 58 66 67 69 71
expresion_list       : 20 22
for_statement        : 11
funcion              : 7
if_statement         : 6
impresion            : 5
increment            : 55
initialization       : 55 57
input_statement      : 10
llamada_funcion      : 28
operador             : 24 26
parametros           : 14 62
php_block            : 0
retorno              : 9
statement            : 2 3
statement_list       : 1 3 14 50 51 51 52 52 53 54 55
termino              : 23 24 25 25

Parsing method: LALR

state 0

    (0) S' -> . php_block
    (1) php_block -> . PHP_OPEN statement_list PHP_CLOSE

    PHP_OPEN        shift and go to state 2

    php_block                      shift and go to state 1

state 1

    (0) S' -> php_block .



state 2

    (1) php_block -> PHP_OPEN . statement_list PHP_CLOSE
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . asignacion
    (5) statement -> . impresion
    (6) statement -> . if_statement
    (7) statement -> . funcion
    (8) statement -> . declarar_array
    (9) statement -> . retorno
    (10) statement -> . input_statement
    (11) statement -> . for_statement
    (12) statement -> . empty
    (15) asignacion -> . VARIABLE ASSIGN expresion SEMICOL
    (16) asignacion -> . VARIABLE ASSIGN condicion SEMICOL
    (17) asignacion -> . array_access ASSIGN expresion SEMICOL
    (18) impresion -> . ECHO SEMICOL
    (19) impresion -> . ECHO expresion SEMICOL
    (20) impresion -> . ECHO expresion_list SEMICOL
    (50) if_statement -> . IF LPAREN condicion RPAREN LBRACE statement_list RBRACE
    (51) if_statement -> . IF LPAREN condicion RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (52) if_statement -> . IF LPAREN condicion RPAREN LBRACE statement_list RBRACE elseif_blocks ELSE LBRACE statement_list RBRACE
    (14) funcion -> . FUNCTION NAMEFUNCTION LPAREN parametros RPAREN LBRACE statement_list RBRACE
    (64) declarar_array -> . VARIABLE ASSIGN ARRAY LPAREN argumentos RPAREN SEMICOL
    (65) declarar_array -> . VARIABLE ASSIGN LBRACKET argumentos RBRACKET SEMICOL
    (69) retorno -> . RETURN expresion SEMICOL
    (13) input_statement -> . VARIABLE ASSIGN READLINE LPAREN STRING RPAREN SEMICOL
    (55) for_statement -> . FOR LPAREN initialization condition increment RPAREN LBRACE statement_list RBRACE
    (72) empty -> .
    (71) array_access -> . VARIABLE LBRACKET expresion RBRACKET

  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for ECHO resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
    VARIABLE        shift and go to state 14
    ECHO            shift and go to state 16
    IF              shift and go to state 17
    FUNCTION        shift and go to state 18
    RETURN          shift and go to state 19
    FOR             shift and go to state 20
    PHP_CLOSE       reduce using rule 72 (empty -> .)

  ! VARIABLE        [ reduce using rule 72 (empty -> .) ]
  ! ECHO            [ reduce using rule 72 (empty -> .) ]
  ! IF              [ reduce using rule 72 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 72 (empty -> .) ]
  ! RETURN          [ reduce using rule 72 (empty -> .) ]
  ! FOR             [ reduce using rule 72 (empty -> .) ]

    statement_list                 shift and go to state 3
    statement                      shift and go to state 4
    asignacion                     shift and go to state 5
    impresion                      shift and go to state 6
    if_statement                   shift and go to state 7
    funcion                        shift and go to state 8
    declarar_array                 shift and go to state 9
    retorno                        shift and go to state 10
    input_statement                shift and go to state 11
    for_statement                  shift and go to state 12
    empty                          shift and go to state 13
    array_access                   shift and go to state 15

state 3

    (1) php_block -> PHP_OPEN statement_list . PHP_CLOSE
    (3) statement_list -> statement_list . statement
    (4) statement -> . asignacion
    (5) statement -> . impresion
    (6) statement -> . if_statement
    (7) statement -> . funcion
    (8) statement -> . declarar_array
    (9) statement -> . retorno
    (10) statement -> . input_statement
    (11) statement -> . for_statement
    (12) statement -> . empty
    (15) asignacion -> . VARIABLE ASSIGN expresion SEMICOL
    (16) asignacion -> . VARIABLE ASSIGN condicion SEMICOL
    (17) asignacion -> . array_access ASSIGN expresion SEMICOL
    (18) impresion -> . ECHO SEMICOL
    (19) impresion -> . ECHO expresion SEMICOL
    (20) impresion -> . ECHO expresion_list SEMICOL
    (50) if_statement -> . IF LPAREN condicion RPAREN LBRACE statement_list RBRACE
    (51) if_statement -> . IF LPAREN condicion RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (52) if_statement -> . IF LPAREN condicion RPAREN LBRACE statement_list RBRACE elseif_blocks ELSE LBRACE statement_list RBRACE
    (14) funcion -> . FUNCTION NAMEFUNCTION LPAREN parametros RPAREN LBRACE statement_list RBRACE
    (64) declarar_array -> . VARIABLE ASSIGN ARRAY LPAREN argumentos RPAREN SEMICOL
    (65) declarar_array -> . VARIABLE ASSIGN LBRACKET argumentos RBRACKET SEMICOL
    (69) retorno -> . RETURN expresion SEMICOL
    (13) input_statement -> . VARIABLE ASSIGN READLINE LPAREN STRING RPAREN SEMICOL
    (55) for_statement -> . FOR LPAREN initialization condition increment RPAREN LBRACE statement_list RBRACE
    (72) empty -> .
    (71) array_access -> . VARIABLE LBRACKET expresion RBRACKET

  ! shift/reduce conflict for PHP_CLOSE resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for ECHO resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
    PHP_CLOSE       shift and go to state 21
    VARIABLE        shift and go to state 14
    ECHO            shift and go to state 16
    IF              shift and go to state 17
    FUNCTION        shift and go to state 18
    RETURN          shift and go to state 19
    FOR             shift and go to state 20

  ! PHP_CLOSE       [ reduce using rule 72 (empty -> .) ]
  ! VARIABLE        [ reduce using rule 72 (empty -> .) ]
  ! ECHO            [ reduce using rule 72 (empty -> .) ]
  ! IF              [ reduce using rule 72 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 72 (empty -> .) ]
  ! RETURN          [ reduce using rule 72 (empty -> .) ]
  ! FOR             [ reduce using rule 72 (empty -> .) ]

    statement                      shift and go to state 22
    asignacion                     shift and go to state 5
    impresion                      shift and go to state 6
    if_statement                   shift and go to state 7
    funcion                        shift and go to state 8
    declarar_array                 shift and go to state 9
    retorno                        shift and go to state 10
    input_statement                shift and go to state 11
    for_statement                  shift and go to state 12
    empty                          shift and go to state 13
    array_access                   shift and go to state 15

state 4

    (2) statement_list -> statement .

    PHP_CLOSE       reduce using rule 2 (statement_list -> statement .)
    VARIABLE        reduce using rule 2 (statement_list -> statement .)
    ECHO            reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    FUNCTION        reduce using rule 2 (statement_list -> statement .)
    RETURN          reduce using rule 2 (statement_list -> statement .)
    FOR             reduce using rule 2 (statement_list -> statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement .)


state 5

    (4) statement -> asignacion .

    PHP_CLOSE       reduce using rule 4 (statement -> asignacion .)
    VARIABLE        reduce using rule 4 (statement -> asignacion .)
    ECHO            reduce using rule 4 (statement -> asignacion .)
    IF              reduce using rule 4 (statement -> asignacion .)
    FUNCTION        reduce using rule 4 (statement -> asignacion .)
    RETURN          reduce using rule 4 (statement -> asignacion .)
    FOR             reduce using rule 4 (statement -> asignacion .)
    RBRACE          reduce using rule 4 (statement -> asignacion .)


state 6

    (5) statement -> impresion .

    PHP_CLOSE       reduce using rule 5 (statement -> impresion .)
    VARIABLE        reduce using rule 5 (statement -> impresion .)
    ECHO            reduce using rule 5 (statement -> impresion .)
    IF              reduce using rule 5 (statement -> impresion .)
    FUNCTION        reduce using rule 5 (statement -> impresion .)
    RETURN          reduce using rule 5 (statement -> impresion .)
    FOR             reduce using rule 5 (statement -> impresion .)
    RBRACE          reduce using rule 5 (statement -> impresion .)


state 7

    (6) statement -> if_statement .

    PHP_CLOSE       reduce using rule 6 (statement -> if_statement .)
    VARIABLE        reduce using rule 6 (statement -> if_statement .)
    ECHO            reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    FUNCTION        reduce using rule 6 (statement -> if_statement .)
    RETURN          reduce using rule 6 (statement -> if_statement .)
    FOR             reduce using rule 6 (statement -> if_statement .)
    RBRACE          reduce using rule 6 (statement -> if_statement .)


state 8

    (7) statement -> funcion .

    PHP_CLOSE       reduce using rule 7 (statement -> funcion .)
    VARIABLE        reduce using rule 7 (statement -> funcion .)
    ECHO            reduce using rule 7 (statement -> funcion .)
    IF              reduce using rule 7 (statement -> funcion .)
    FUNCTION        reduce using rule 7 (statement -> funcion .)
    RETURN          reduce using rule 7 (statement -> funcion .)
    FOR             reduce using rule 7 (statement -> funcion .)
    RBRACE          reduce using rule 7 (statement -> funcion .)


state 9

    (8) statement -> declarar_array .

    PHP_CLOSE       reduce using rule 8 (statement -> declarar_array .)
    VARIABLE        reduce using rule 8 (statement -> declarar_array .)
    ECHO            reduce using rule 8 (statement -> declarar_array .)
    IF              reduce using rule 8 (statement -> declarar_array .)
    FUNCTION        reduce using rule 8 (statement -> declarar_array .)
    RETURN          reduce using rule 8 (statement -> declarar_array .)
    FOR             reduce using rule 8 (statement -> declarar_array .)
    RBRACE          reduce using rule 8 (statement -> declarar_array .)


state 10

    (9) statement -> retorno .

    PHP_CLOSE       reduce using rule 9 (statement -> retorno .)
    VARIABLE        reduce using rule 9 (statement -> retorno .)
    ECHO            reduce using rule 9 (statement -> retorno .)
    IF              reduce using rule 9 (statement -> retorno .)
    FUNCTION        reduce using rule 9 (statement -> retorno .)
    RETURN          reduce using rule 9 (statement -> retorno .)
    FOR             reduce using rule 9 (statement -> retorno .)
    RBRACE          reduce using rule 9 (statement -> retorno .)


state 11

    (10) statement -> input_statement .

    PHP_CLOSE       reduce using rule 10 (statement -> input_statement .)
    VARIABLE        reduce using rule 10 (statement -> input_statement .)
    ECHO            reduce using rule 10 (statement -> input_statement .)
    IF              reduce using rule 10 (statement -> input_statement .)
    FUNCTION        reduce using rule 10 (statement -> input_statement .)
    RETURN          reduce using rule 10 (statement -> input_statement .)
    FOR             reduce using rule 10 (statement -> input_statement .)
    RBRACE          reduce using rule 10 (statement -> input_statement .)


state 12

    (11) statement -> for_statement .

    PHP_CLOSE       reduce using rule 11 (statement -> for_statement .)
    VARIABLE        reduce using rule 11 (statement -> for_statement .)
    ECHO            reduce using rule 11 (statement -> for_statement .)
    IF              reduce using rule 11 (statement -> for_statement .)
    FUNCTION        reduce using rule 11 (statement -> for_statement .)
    RETURN          reduce using rule 11 (statement -> for_statement .)
    FOR             reduce using rule 11 (statement -> for_statement .)
    RBRACE          reduce using rule 11 (statement -> for_statement .)


state 13

    (12) statement -> empty .

    PHP_CLOSE       reduce using rule 12 (statement -> empty .)
    VARIABLE        reduce using rule 12 (statement -> empty .)
    ECHO            reduce using rule 12 (statement -> empty .)
    IF              reduce using rule 12 (statement -> empty .)
    FUNCTION        reduce using rule 12 (statement -> empty .)
    RETURN          reduce using rule 12 (statement -> empty .)
    FOR             reduce using rule 12 (statement -> empty .)
    RBRACE          reduce using rule 12 (statement -> empty .)


state 14

    (15) asignacion -> VARIABLE . ASSIGN expresion SEMICOL
    (16) asignacion -> VARIABLE . ASSIGN condicion SEMICOL
    (64) declarar_array -> VARIABLE . ASSIGN ARRAY LPAREN argumentos RPAREN SEMICOL
    (65) declarar_array -> VARIABLE . ASSIGN LBRACKET argumentos RBRACKET SEMICOL
    (13) input_statement -> VARIABLE . ASSIGN READLINE LPAREN STRING RPAREN SEMICOL
    (71) array_access -> VARIABLE . LBRACKET expresion RBRACKET

    ASSIGN          shift and go to state 23
    LBRACKET        shift and go to state 24


state 15

    (17) asignacion -> array_access . ASSIGN expresion SEMICOL

    ASSIGN          shift and go to state 25


state 16

    (18) impresion -> ECHO . SEMICOL
    (19) impresion -> ECHO . expresion SEMICOL
    (20) impresion -> ECHO . expresion_list SEMICOL
    (23) expresion -> . termino
    (24) expresion -> . termino operador expresion
    (25) expresion -> . termino comparador termino
    (26) expresion -> . LPAREN expresion RPAREN operador expresion
    (27) expresion -> . LPAREN expresion RPAREN
    (28) expresion -> . llamada_funcion
    (29) expresion -> . array_access
    (21) expresion_list -> . expresion
    (22) expresion_list -> . expresion COMA expresion_list
    (30) termino -> . VARIABLE
    (31) termino -> . NUMBER
    (32) termino -> . FLOAT
    (33) termino -> . STRING
    (70) llamada_funcion -> . VARIABLE LPAREN argumentos RPAREN
    (71) array_access -> . VARIABLE LBRACKET expresion RBRACKET

    SEMICOL         shift and go to state 26
    LPAREN          shift and go to state 30
    VARIABLE        shift and go to state 33
    NUMBER          shift and go to state 34
    FLOAT           shift and go to state 35
    STRING          shift and go to state 36

    expresion                      shift and go to state 27
    expresion_list                 shift and go to state 28
    termino                        shift and go to state 29
    llamada_funcion                shift and go to state 31
    array_access                   shift and go to state 32

state 17

    (50) if_statement -> IF . LPAREN condicion RPAREN LBRACE statement_list RBRACE
    (51) if_statement -> IF . LPAREN condicion RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (52) if_statement -> IF . LPAREN condicion RPAREN LBRACE statement_list RBRACE elseif_blocks ELSE LBRACE statement_list RBRACE

    LPAREN          shift and go to state 37


state 18

    (14) funcion -> FUNCTION . NAMEFUNCTION LPAREN parametros RPAREN LBRACE statement_list RBRACE

    NAMEFUNCTION    shift and go to state 38


state 19

    (69) retorno -> RETURN . expresion SEMICOL
    (23) expresion -> . termino
    (24) expresion -> . termino operador expresion
    (25) expresion -> . termino comparador termino
    (26) expresion -> . LPAREN expresion RPAREN operador expresion
    (27) expresion -> . LPAREN expresion RPAREN
    (28) expresion -> . llamada_funcion
    (29) expresion -> . array_access
    (30) termino -> . VARIABLE
    (31) termino -> . NUMBER
    (32) termino -> . FLOAT
    (33) termino -> . STRING
    (70) llamada_funcion -> . VARIABLE LPAREN argumentos RPAREN
    (71) array_access -> . VARIABLE LBRACKET expresion RBRACKET

    LPAREN          shift and go to state 30
    VARIABLE        shift and go to state 33
    NUMBER          shift and go to state 34
    FLOAT           shift and go to state 35
    STRING          shift and go to state 36

    expresion                      shift and go to state 39
    termino                        shift and go to state 29
    llamada_funcion                shift and go to state 31
    array_access                   shift and go to state 32

state 20

    (55) for_statement -> FOR . LPAREN initialization condition increment RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 40


state 21

    (1) php_block -> PHP_OPEN statement_list PHP_CLOSE .

    $end            reduce using rule 1 (php_block -> PHP_OPEN statement_list PHP_CLOSE .)


state 22

    (3) statement_list -> statement_list statement .

    PHP_CLOSE       reduce using rule 3 (statement_list -> statement_list statement .)
    VARIABLE        reduce using rule 3 (statement_list -> statement_list statement .)
    ECHO            reduce using rule 3 (statement_list -> statement_list statement .)
    IF              reduce using rule 3 (statement_list -> statement_list statement .)
    FUNCTION        reduce using rule 3 (statement_list -> statement_list statement .)
    RETURN          reduce using rule 3 (statement_list -> statement_list statement .)
    FOR             reduce using rule 3 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement_list statement .)


state 23

    (15) asignacion -> VARIABLE ASSIGN . expresion SEMICOL
    (16) asignacion -> VARIABLE ASSIGN . condicion SEMICOL
    (64) declarar_array -> VARIABLE ASSIGN . ARRAY LPAREN argumentos RPAREN SEMICOL
    (65) declarar_array -> VARIABLE ASSIGN . LBRACKET argumentos RBRACKET SEMICOL
    (13) input_statement -> VARIABLE ASSIGN . READLINE LPAREN STRING RPAREN SEMICOL
    (23) expresion -> . termino
    (24) expresion -> . termino operador expresion
    (25) expresion -> . termino comparador termino
    (26) expresion -> . LPAREN expresion RPAREN operador expresion
    (27) expresion -> . LPAREN expresion RPAREN
    (28) expresion -> . llamada_funcion
    (29) expresion -> . array_access
    (34) condicion -> . expresion comparador expresion
    (35) condicion -> . condicion AND_OP condicion
    (36) condicion -> . condicion OR_OP condicion
    (37) condicion -> . NOT_OP condicion
    (38) condicion -> . expresion
    (30) termino -> . VARIABLE
    (31) termino -> . NUMBER
    (32) termino -> . FLOAT
    (33) termino -> . STRING
    (70) llamada_funcion -> . VARIABLE LPAREN argumentos RPAREN
    (71) array_access -> . VARIABLE LBRACKET expresion RBRACKET

    ARRAY           shift and go to state 43
    LBRACKET        shift and go to state 44
    READLINE        shift and go to state 45
    LPAREN          shift and go to state 30
    NOT_OP          shift and go to state 46
    VARIABLE        shift and go to state 33
    NUMBER          shift and go to state 34
    FLOAT           shift and go to state 35
    STRING          shift and go to state 36

    expresion                      shift and go to state 41
    condicion                      shift and go to state 42
    termino                        shift and go to state 29
    llamada_funcion                shift and go to state 31
    array_access                   shift and go to state 32

state 24

    (71) array_access -> VARIABLE LBRACKET . expresion RBRACKET
    (23) expresion -> . termino
    (24) expresion -> . termino operador expresion
    (25) expresion -> . termino comparador termino
    (26) expresion -> . LPAREN expresion RPAREN operador expresion
    (27) expresion -> . LPAREN expresion RPAREN
    (28) expresion -> . llamada_funcion
    (29) expresion -> . array_access
    (30) termino -> . VARIABLE
    (31) termino -> . NUMBER
    (32) termino -> . FLOAT
    (33) termino -> . STRING
    (70) llamada_funcion -> . VARIABLE LPAREN argumentos RPAREN
    (71) array_access -> . VARIABLE LBRACKET expresion RBRACKET

    LPAREN          shift and go to state 30
    VARIABLE        shift and go to state 33
    NUMBER          shift and go to state 34
    FLOAT           shift and go to state 35
    STRING          shift and go to state 36

    expresion                      shift and go to state 47
    termino                        shift and go to state 29
    llamada_funcion                shift and go to state 31
    array_access                   shift and go to state 32

state 25
